--- a/res/layout/base_header_layout.xml
+++ b/res/layout/base_header_layout.xml
@@ -18,23 +18,22 @@
   -->
 
 <!-- This is the Header Layout
-     If you customize your header layout, if you want to preserve built-in feature use same IDs.
-    -->
+     If you customize your header layout, if you want to preserve built-in feature use same IDs. -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true"
-                style="@style/card.header_compound_view">
+<RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        style="@style/card.header_compound_view">
 
     <!-- This is the Inner Content Header which you can populate runtime
-         with setupInnerViewElements(android.view.ViewGroup, android.view.View) method in CardHeader class.-->
+         with setupInnerViewElements(android.view.ViewGroup, android.view.View) method in CardHeader class. -->
     <FrameLayout
         android:id="@+id/card_header_inner_frame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-
 
     <!-- This is the Button Frame.
          You can custom its behaviour with some methods in CardHeader class -->
@@ -53,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-        <!-- Expand/Collapse button. It shows/hides a Hidden Frame-->
+        <!-- Expand/Collapse button. It shows/hides a Hidden Frame -->
         <ImageButton
             android:id="@+id/card_header_button_expand"
             style="@style/card.header_button_base.expand"
@@ -69,4 +68,3 @@
     </FrameLayout>
 
 </RelativeLayout>
-
