--- a/res/layout/card_base_layout.xml
+++ b/res/layout/card_base_layout.xml
@@ -24,11 +24,11 @@
  *
 -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <View
         android:id="@+id/card_main_content_layout"
@@ -40,6 +40,5 @@
         android:id="@+id/card_shadow_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-
 
 </LinearLayout>
