--- a/res/layout/card_overlay_layout.xml
+++ b/res/layout/card_overlay_layout.xml
@@ -18,12 +18,13 @@
   ~  *****************************************************************************
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:card="http://schemas.android.com/apk/res-auto"
-              android:orientation="vertical"
-              style="@style/card"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
+        style="@style/card"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <!-- Card visible layout -->
     <LinearLayout
@@ -31,12 +32,11 @@
         style="@style/card.main_layout"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <!-- Compound view for Header Card
              If you want to customize this element use attr card:card_header_layout_resourceID
-             You can also use your CardHeader subclass-->
+             You can also use your CardHeader subclass -->
         <com.android.cards.view.component.CardHeaderView
             style="@style/card.header_outer_layout"
             android:id="@+id/card_header_layout"
@@ -71,11 +71,7 @@
         android:id="@+id/card_content_expand_layout"
         style="@style/card.main_contentExpand"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-
-
-
+        android:layout_height="wrap_content">
     </FrameLayout>
 
 </LinearLayout>
