--- a/res/layout/card_undo_layout.xml
+++ b/res/layout/card_undo_layout.xml
@@ -19,10 +19,11 @@
   -->
 
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/undobar"
-              style="@style/list_card_UndoBar"
-              android:orientation="horizontal">
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/undobar"
+        style="@style/list_card_UndoBar"
+        android:orientation="horizontal">
 
     <TextView
         android:id="@+id/undobar_message"
@@ -31,5 +32,5 @@
     <Button
         android:id="@+id/undobar_button"
         style="@style/list_card_UndoBarButton"/>
-</LinearLayout>
 
+</LinearLayout>
