--- a/res/layout/inner_base_expand.xml
+++ b/res/layout/inner_base_expand.xml
@@ -19,10 +19,11 @@
   -->
 <!-- This is the InnerContent of Expand/Collapse Area -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <TextView
         android:layout_width="wrap_content"
