--- a/res/layout/list_card_thumbnail_layout.xml
+++ b/res/layout/list_card_thumbnail_layout.xml
@@ -28,7 +28,4 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     style="@style/list_card.thumbnail"
-    card:card_layout_resourceID="@layout/card_thumbnail_layout"
-    />
-
-
+    card:card_layout_resourceID="@layout/card_thumbnail_layout"/>
