--- a/res/layout/list_card_undo_message.xml
+++ b/res/layout/list_card_undo_message.xml
@@ -18,10 +18,11 @@
   -->
 <!-- Use this layout for a default undo message -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/list_card_undobar"
-              style="@style/list_card_UndoBar"
-              android:orientation="horizontal">
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/list_card_undobar"
+        style="@style/list_card_UndoBar"
+        android:orientation="horizontal">
 
     <TextView
         android:id="@+id/list_card_undobar_message"
